# MoSqueeze

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: cache-warmup.yml  ci.yml  docker-publish.yml  docker-server-optimized.yml  docker-server.yml
benchmarks/corpus/: README.md
benchmarks/results/: results.csv  results.json  results.sqlite3
cmake/: vcpkg.cmake
config/: selection_rules.json
docs/: docker-optimization.md
docs/benchmarks/: combined_decision_matrix.json  decision-matrix-2026-04.md  extended-benchmark-plan.md  jpeg-baseline-results.md  png-full-matrix-results.md  png-oxipng-results.md
docs/benchmarks/linux-vm-2026-04/: benchmark_results.json
docs/features/: feat-10-zpaq-engine.md  feat-100-prediction-engine.md  feat-101-cli-predict-command.md  feat-102-prediction-tests.md  feat-107-zpaq-file-size-validation.md  feat-108-sigterm-partial-output.md  feat-109-pdf-document-type.md  feat-11-algorithm-selection.md  feat-114-decision-matrix-porter-update.md  feat-12-cross-platform-cli.md  feat-13-png-optimization.md  feat-21-video-support.md  feat-23-enhanced-benchmark-tool.md  feat-29-parallel-benchmark.md  feat-31-preprocessing-engine.md  feat-33-threadpool-deadlock.md  feat-34-grpc-service.md  feat-35-raw-metadata-stripper.md  feat-36-bayer-preprocessor.md  feat-38-disable-parallel-memory-tracking.md  feat-40-benchmark-visualization.md  feat-43-benchmark-preprocess.md  feat-45-progress-feedback.md  feat-46-bayer-raf-parsing.md  feat-48-progress-bar-freeze.md  feat-51-oxipng-integration.md  feat-52-preprocessor-tests.md  feat-53-raw-format-support.md  feat-55-intelligent-selector.md  feat-6-cpp-project-scaffold.md  feat-62-compressed-formats.md  feat-67-cli-compress-decompress.md  feat-7-8-compression-core.md  feat-9-1-lzma-brotli-benchmark.md  feat-99-decision-matrix-provider.md  fix-64-progress-bar.md  proposed-issues.md
docs/wiki/: index.md  log.md  preprocessing.md
docs/wiki/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace.json
docs/wiki/algorithms/: brotli.md  comparison-matrix.md  lzma-xz.md  video-compression.md  zpaq.md  zstd.md
docs/wiki/benchmarks/: corpus-selection.md  methodology.md
docs/wiki/decisions/: algorithm-selection-engine.md  compression-levels.md  file-type-to-algorithm.md  (+1 more)
scripts/: benchmark-config.yaml  generate_benchmark_corpus.py
src/libmosqueeze/: CMakeLists.txt
src/libmosqueeze/cmake/: EmbedData.cmake  EmbedResources.cmake
src/libmosqueeze/include/mosqueeze/: AlgorithmSelector.hpp  BenchmarkDatabase.hpp  CompressionPipeline.hpp  DecisionMatrix.hpp  FileAnalyzer.hpp  FileClassification.hpp  FileTypeDetector.hpp  ICompressionEngine.hpp  IntelligentSelector.hpp  PredictionEngine.hpp  Preprocessor.hpp  PreprocessorSelector.hpp  RawFormat.hpp  Types.hpp  Version.hpp
src/libmosqueeze/include/mosqueeze/bench/: BenchmarkConfig.hpp  BenchmarkResult.hpp
src/libmosqueeze/include/mosqueeze/engines/: BrotliEngine.hpp  LzmaEngine.hpp  ZpaqEngine.hpp  ZstdEngine.hpp
src/libmosqueeze/include/mosqueeze/preprocessors/: BayerPreprocessor.hpp  DictionaryPreprocessor.hpp  ImageMetaStripper.hpp  JsonCanonicalizer.hpp  PngOptimizer.hpp  XmlCanonicalizer.hpp
src/libmosqueeze/src/: AlgorithmSelector.cpp  BenchmarkDatabase.cpp  CompressionPipeline.cpp  DecisionMatrix.cpp  FileAnalyzer.cpp  FileTypeDetector.cpp  IntelligentSelector.cpp  PredictionEngine.cpp  PreprocessorSelector.cpp  RawFormat.cpp  Version.cpp
src/libmosqueeze/src/engines/: BrotliEngine.cpp  LzmaEngine.cpp  ZpaqEngine.cpp  ZstdEngine.cpp
src/libmosqueeze/src/platform/: Platform.cpp  Platform.hpp
src/libmosqueeze/src/preprocessors/: BayerPreprocessor.cpp  DictionaryPreprocessor.cpp  ImageMetaStripper.cpp  JsonCanonicalizer.cpp  PngOptimizer.cpp  RafParser.cpp  RafParser.hpp  XmlCanonicalizer.cpp
src/mosqueeze-bench/: CMakeLists.txt
src/mosqueeze-bench/include/mosqueeze/bench/: BenchmarkRunner.hpp  CorpusManager.hpp  Formatters.hpp  ProgressReporter.hpp  ResultsStore.hpp  SignalHandler.hpp  ThreadPool.hpp
src/mosqueeze-bench/src/: BenchmarkRunner.cpp  CorpusManager.cpp  Formatters.cpp  ProgressReporter.cpp  ResultsStore.cpp  ThreadPool.cpp  main.cpp
src/mosqueeze-cli/: CMakeLists.txt
src/mosqueeze-cli/src/: ProgressIndicator.hpp  Terminal.cpp  Terminal.hpp  main.cpp
src/mosqueeze-cli/src/commands/: CompressCommand.cpp  CompressCommand.hpp  DecompressCommand.cpp  DecompressCommand.hpp  PredictCommand.cpp  PredictCommand.hpp
src/mosqueeze-server/: CMakeLists.txt  Dockerfile  Dockerfile.optimized
src/mosqueeze-server/proto/: compression.proto
src/mosqueeze-server/src/: compressor.cpp  compressor.hpp  main.cpp  service.cpp  service.hpp
src/mosqueeze-server/tests/: service_test.cpp
src/mosqueeze-viz/: CMakeLists.txt
src/mosqueeze-viz/include/mosqueeze/viz/: Charts.hpp  ComparisonEngine.hpp  DashboardGenerator.hpp  DataLoader.hpp  MarkdownExporter.hpp  Types.hpp
src/mosqueeze-viz/src/: Charts.cpp  ComparisonEngine.cpp  DashboardGenerator.cpp  DataLoader.cpp  MarkdownExporter.cpp  main.cpp
tests/: CMakeLists.txt
tests/prediction/: CMakeLists.txt  DecisionMatrixTest.cpp  PredictCommandIntegrationTest.cpp  PredictionEngineTest.cpp
tests/unit/: AlgorithmConstraint_test.cpp  AlgorithmSelector_test.cpp  BayerPreprocessor_test.cpp  BenchmarkConfig_test.cpp  BenchmarkDatabase_test.cpp  BenchmarkExtendedMatrix_test.cpp  BenchmarkPreprocess_test.cpp  BrotliEngine_test.cpp  DecisionMatrix_test.cpp  DictionaryPreprocessor_test.cpp  FileAnalyzer_test.cpp  FileTypeDetector_test.cpp  ImageMetaStripper_test.cpp  IntelligentSelector_test.cpp  JsonCanonicalizer_test.cpp  LzmaEngine_test.cpp  Pipeline_test.cpp  PngOptimizer_test.cpp  PredictionEngine_test.cpp  PreprocessorSelector_test.cpp  ProgressReporter_test.cpp  RafParser_test.cpp  RawFormat_test.cpp  SignalHandler_test.cpp  ThreadPool_test.cpp  Version_test.cpp  VideoFileType_test.cpp  Viz_test.cpp  XmlCanonicalizer_test.cpp  ZpaqEngine_test.cpp  ZstdEngine_test.cpp
(+44 files in other folders)
